<resources>
    <string name="app_name">Pivuzz</string>
    <string-array name="location">
        <item>USA</item>
        <item>Iraq</item>
        <item>Iran</item>
        <item>China</item>
        <item>Argentina</item>
        <item>Indonesia</item>
        <item>Mexico</item>
        <item>Canada</item>
        <item>Russia</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Germany</item>
        <item>India</item>
        <item>Italy</item>
        <item>Israel</item>
        <item>Laos</item>
        <item>Mexico</item>
        <item>Pakistan</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Singapore</item>
        <item>Somalia</item>
        <item>Thailand</item>
        <item>Belgium</item>
        <item>Canada</item>
        <item>Denmark</item>
    </string-array>
    <string name="more">More Report</string>
    <string name="cou">Country</string>
    <string name="con">Confirmed : </string>
    <string name="dea">Death : </string>
    <string name="rec">Recovery : </string>
    <string name="dnc">Death &amp; Confirmed</string>
    <string name="death1">Death</string>
    <string name="confirme">Confirmed</string>
    <string name="recove">Recovered</string>
    <string name="globalreport">Daily Global Report</string>
    <string name="disclaimer">Confirm number, recovered number, death number are total from all data.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="local">Local</string>
    <string name="settings">Setting</string>
    <string name="global">Global</string>
    <string name="about">About</string>
    <string name="desc">splash img</string>
    <string name="creator">Dayyan Syehan</string>
    <string name="created">Created by </string>
    <string name="obtain">Data obtained from</string>
    <string name="api">COVID-19 API by Mathdroid</string>
    <string name="privacy">All data collected from your device is never shared.</string>
    <string name="confirm">Confirm Cases</string>
    <string name="onek">-</string>
    <string name="recover">Recover</string>
    <string name="death">Death</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="enterName">Enter Username</string>
    <string name="enterPass">Enter Password</string>
    <string name="createAcc">Create an account</string>
    <string name="register">Register</string>
    <string name="location">Select Location</string>
</resources>
