<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarAbout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAbout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/about"
            android:background="@color/white"
            app:titleTextColor="@color/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_margin="@dimen/margin_global"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/creator"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obtain"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_sekunder"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_global">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipApi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/api"
                android:textColor="@color/colorPrimary"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/colorPrimary"
                app:chipStrokeWidth="1dp" />

        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/margin_sekunder"
            android:layout_gravity="center"
            android:layout_width="210dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/privacy"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>