<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentGlobal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_global">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_confirm_global"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:rippleColor="@color/ripple"
                android:clickable="true"
                android:focusable="true"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_margin="5dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:rippleColor="@color/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/margin_global">

                    <ImageView
                        android:layout_margin="@dimen/margin_global"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_done_all_black_24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tv_confirm_global"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/tv_nmb_confirm_global"
                        android:layout_margin="@dimen/margin_global"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nanumgothic_bold"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/margin_global"
                        android:id="@+id/tv_nmb_confirm_global"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onek"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_large"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/ln_body"
                app:layout_constraintTop_toBottomOf="@id/cv_confirm_global"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_margin="@dimen/margin_small"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="180dp"
                    app:rippleColor="@color/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorPrimary">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_small">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/heart"
                            app:layout_constraintBottom_toTopOf="@+id/tv_recover_global"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_recover_global"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/tv_nmb_recover_global"
                            android:layout_marginEnd="@dimen/margin_global"
                            android:layout_marginBottom="@dimen/margin_global"
                            android:layout_marginTop="@dimen/margin_global"
                            android:layout_marginStart="@dimen/margin_global"
                            android:fontFamily="@font/nanumgothic_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recover"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_large" />

                        <TextView
                            android:id="@+id/tv_nmb_recover_global"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_global"
                            android:layout_marginBottom="@dimen/margin_global"
                            android:text="@string/onek"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_margin="@dimen/margin_small"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    app:rippleColor="@color/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorPrimary">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/golgotha"
                            app:layout_constraintBottom_toTopOf="@+id/tv_death_global"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_death_global"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_global"
                            android:text="@string/death"
                            android:textColor="@color/white"
                            android:fontFamily="@font/nanumgothic_bold"
                            android:textSize="@dimen/text_large"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/tv_nmb_death_global"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="@dimen/margin_global"
                            android:layout_marginBottom="@dimen/margin_sekunder"
                            android:layout_marginEnd="@dimen/margin_global"
                            android:layout_marginStart="@dimen/margin_global"
                            android:id="@+id/tv_nmb_death_global"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="@string/onek"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_large"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                app:layout_constraintTop_toBottomOf="@id/ln_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:rippleColor="@color/ripple"
                android:clickable="true"
                android:focusable="true"
                style="@style/Widget.MaterialComponents.CardView"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_margin="5dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:rippleColor="@color/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/margin_global">
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>